# Cleanux

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_MASTER_PLAN.md  REFACTORING_PLAN.md  angular.json  package.json  playwright.config.ts  quality.md  tsconfig.json  vitest.config.ts
src-tauri/: .env.staging  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: constants.rs  dto.rs  lib.rs  logger.rs  main.rs  middleware.rs  state.rs
src-tauri/src/commands/: automation.command.rs  cleaner.command.rs  dashboard.command.rs  health.command.rs  log.command.rs  logger.command.rs  macros.rs  mod.rs  monitor.command.rs  package.command.rs  profile.command.rs  report.command.rs  storage.command.rs  system.command.rs
src-tauri/src/entities/: automation-recipe.entity.rs  cleaning-profile.entity.rs  cleaning-report.entity.rs  cleaning_report.entity.rs  execution-history.entity.rs  health-snapshot.entity.rs  health_snapshot.entity.rs  mod.rs  response.entity.rs
src-tauri/src/errors/: app.error.rs  app_error.rs  mod.rs
src-tauri/tests/: app_residue_service_tests.rs  cache_cleaning_service_tests.rs  cache_service_tests.rs  command_tests.rs  dev_cache_service_tests.rs  directory_service_tests.rs  error_tests.rs  filesystem_helper_tests.rs  junk_cleaner_tests.rs  kernel_cleaner_service_tests.rs  log_manager_service_tests.rs  media_cache_service_tests.rs  package_deep_clean_service_tests.rs  path_validation_tests.rs  response_helper_tests.rs  response_model_tests.rs  security_tests.rs  trash_cleaning_service_tests.rs
(+556 files in other folders)
